# Snake

./: CMakeLists.txt  Snake.h  main.cpp  tests_main.cpp
doctest/: CMakeLists.txt
